staging-load-generator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: load-generator
spec:
  containers:
  - name: load-generator
    image: ubuntu:latest
    command: [ "/bin/bash", "-c", "--" ]
    args: [ 'apt-get update; apt-get install -y wget && while true; do wget -q -O- http://LB_IP/; done' ]
