ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stg-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - host: staging-guestbook.mstakx.io
   http:
     paths:
     - path: /
       backend:
         serviceName: frontend
         servicePort: 80
