production-guestbook-ingress.yaml
apiVersion: extensions/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: prod-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - host: guestbook.mstakx.io
   http:
     paths:
     - path: /
       backend:
         serviceName: frontend
         servicePort: 80
